fix positioning of connect button on iphone part 2

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -258,8 +258,9 @@ body {
   }
   a#connect {
     padding-top: 7px;
-    padding-right: 35px;
+    padding-right: 5px;
     padding-bottom: 11px;
+    margin-bottom: 11px;
     text-align: center;
 
   }
